# rinha-2026-rust

./: .dockerignore  .gitignore  ARCHITECTURE.md  Dockerfile  Dockerfile.local  Dockerfile.rust  Dockerfile.rust.local  LICENSE  benchmark-results-rust.csv  benchmark-results.csv  docker-compose.3api.yml  docker-compose.local-k6.yml  docker-compose.nolimits-k6.yml  docker-compose.rust.yml  docker-compose.yml  go.mod  haproxy.3api.cfg  haproxy.cfg  haproxy.uds.cfg  info.json
api/cmd/bench/: main.go
api/cmd/buildindex/: main.go
api/cmd/recall/: main.go
api/cmd/server/: main.go
api/internal/handler/: handler.go
api/internal/search/: searcher.go
api/internal/search/hnsw/: hnsw.go
api/internal/search/ivf/: ivf.go  ivf_test.go
api/internal/search/uds/: client.go  server.go  uds_test.go
api/internal/vectorize/: vectorize.go
participants/: fandangolas.json
rust-api/: Cargo.toml
rust-api/src/: main.rs  search.rs  timing.rs  vectorize.rs
scripts/: bench-instances.sh  full-sweep.sh  run-k6.sh  rust-sweep.sh  set-cpu-burst.sh
submission/: info.json
test/: test-diag.js  test-direct.js
