[package]
name = "rinha-api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rinha-api"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", default-features = false, features = ["http1", "tokio", "matched-path", "query"] }
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros", "io-util"] }
memmap2 = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
tower-http = { version = "0.5", features = [] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
