[package]
name = "rinha-api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rinha-api"
path = "src/main.rs"

[[bin]]
name = "buildindex"
path = "src/bin/buildindex.rs"

[[bin]]
name = "classify_mismatches"
path = "src/bin/classify_mismatches.rs"

[dependencies]
axum = { version = "0.7", default-features = false, features = ["http1", "tokio", "matched-path", "query"] }
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros", "io-util"] }
hyper = { version = "1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio", "service"] }
memmap2 = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
tower-http = { version = "0.5", features = [] }
flate2 = "1"
rand = { version = "0.9", default-features = false, features = ["std", "std_rng"] }
rand_chacha = "0.9"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
